fixed horizontal scrolling issue

--- a/public/css/stamp.css
+++ b/public/css/stamp.css
@@ -8,7 +8,7 @@
     display: grid;
     margin: 16px auto;
     max-width: calc(var(--stamp-size) * 4);
-    width: 100vw;
+    width: 95vw;
     justify-content: center;
     grid-template-columns: repeat(auto-fill, var(--stamp-size));
 }
